# task-manager

./: .env  .gitignore  Makefile  README.md  api.http  database.db  main.py  pyproject.toml
config/: __init__.py  config.py  settings.json  settings.py
src/: app.py  db.py  exception_handlers.py  redirects.py
src/controllers/: task_controller.py
src/domain/models/: task.py
src/domain/requests/: task_request.py
src/domain/responses/: task_response.py
src/interfaces/: base_repository.py  base_service.py
src/repositories/: task_repository.py
src/services/: task_service.py
tests/: test_controllers.py  test_services.py
